--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
 </head>
 
 <body>
@@ -116,15 +117,83 @@
     <section id="skills">
         <div class="container">
             <h2 class="section-title">Technical Skills</h2>
-            <div class="skills-list">
-                <span class="skill-tag">HTML5</span>
-                <span class="skill-tag">CSS3</span>
-                <span class="skill-tag">JavaScript</span>
-                <span class="skill-tag">Python</span>
-                <span class="skill-tag">Java</span>
-                <span class="skill-tag">C/C++</span>
-                <span class="skill-tag">Git/GitHub</span>
-                <span class="skill-tag">Responsive Design</span>
+
+            <div class="skill-category">
+                <h3>Languages</h3>
+                <div class="skills-grid">
+                    <div class="skill-item"><i class="devicon-python-plain colored"></i><span>Python</span></div>
+                    <div class="skill-item"><i class="devicon-java-plain colored"></i><span>Java</span></div>
+                    <div class="skill-item"><i class="devicon-cplusplus-plain colored"></i><span>C/C++</span></div>
+                    <div class="skill-item"><i class="devicon-html5-plain colored"></i><span>HTML5</span></div>
+                    <div class="skill-item"><i class="devicon-css3-plain colored"></i><span>CSS3</span></div>
+                    <div class="skill-item"><i class="devicon-javascript-plain colored"></i><span>JavaScript</span>
+                    </div>
+                    <div class="skill-item"><i class="devicon-typescript-plain colored"></i><span>TypeScript</span>
+                    </div>
+                    <div class="skill-item"><i class="devicon-php-plain colored"></i><span>PHP</span></div>
+                    <div class="skill-item"><i class="devicon-csharp-plain colored"></i><span>C#</span></div>
+                </div>
+            </div>
+
+            <div class="skill-category">
+                <h3>Frameworks</h3>
+                <div class="skills-grid">
+                    <div class="skill-item"><i class="devicon-django-plain colored"></i><span>Django</span></div>
+                    <div class="skill-item"><i class="devicon-dotnetcore-plain colored"></i><span>.NET</span></div>
+                    <div class="skill-item"><i class="devicon-flutter-plain colored"></i><span>Flutter</span></div>
+                    <div class="skill-item"><i class="devicon-react-original colored"></i><span>React Native</span>
+                    </div>
+                    <div class="skill-item"><i class="devicon-nestjs-plain colored"></i><span>NestJS</span></div>
+                    <div class="skill-item"><i class="devicon-laravel-plain colored"></i><span>Laravel</span></div>
+                </div>
+            </div>
+
+            <div class="skill-category">
+                <h3>Database & Cloud</h3>
+                <div class="skills-grid">
+                    <div class="skill-item"><i class="devicon-postgresql-plain colored"></i><span>PostgreSQL</span>
+                    </div>
+                    <div class="skill-item"><i class="devicon-mysql-plain colored"></i><span>MySQL</span></div>
+                    <div class="skill-item"><i class="devicon-firebase-plain colored"></i><span>Firebase</span></div>
+                    <div class="skill-item">
+                        <img src="https://supabase.com/dashboard/img/supabase-logo.svg" alt="Supabase"
+                            style="width: 48px; height: 48px; margin-bottom: 10px;">
+                        <span>Supabase</span>
+                    </div>
+                    <div class="skill-item"><i
+                            class="devicon-amazonwebservices-plain-wordmark colored"></i><span>AWS</span></div>
+                    <div class="skill-item"><i class="devicon-googlecloud-plain colored"></i><span>GCP</span></div>
+                    <div class="skill-item"><i class="devicon-vercel-original colored"></i><span>Vercel</span></div>
+                    <div class="skill-item">
+                        <img src="assets/images/railway.svg" alt="Railway"
+                            style="width: 48px; height: 48px; margin-bottom: 10px;">
+                        <span>Railway</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="skill-category">
+                <h3>Tools & Environment</h3>
+                <div class="skills-grid">
+                    <div class="skill-item"><i class="devicon-vscode-plain colored"></i><span>VS Code</span></div>
+                    <div class="skill-item"><i class="devicon-neovim-plain colored"></i><span>Neovim</span></div>
+                    <div class="skill-item"><i class="devicon-visualstudio-plain colored"></i><span>Visual Studio</span>
+                    </div>
+                    <div class="skill-item"><i class="devicon-docker-plain colored"></i><span>Docker</span></div>
+                    <div class="skill-item"><i class="devicon-git-plain colored"></i><span>Git</span></div>
+                    <div class="skill-item"><i class="devicon-linux-plain colored"></i><span>Linux</span></div>
+                    <div class="skill-item"><i class="devicon-archlinux-plain colored"></i><span>Arch</span></div>
+                    <div class="skill-item">
+                        <img src="assets/images/packet-tracer.png" alt="Packet Tracer"
+                            style="width: 48px; height: 48px; margin-bottom: 10px;">
+                        <span>Packet Tracer</span>
+                    </div>
+                    <div class="skill-item">
+                        <img src="assets/images/wireshark.svg" alt="Wireshark"
+                            style="width: 48px; height: 48px; margin-bottom: 10px;">
+                        <span>Wireshark</span>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
