--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
+                <li><a href="#certificates">Certificates</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -225,6 +226,40 @@
                     <img src="assets/images/Screenshot 2023-12-15 001406.png" alt="Registration Form">
                     <h3>Registration System</h3>
                     <p>A simple registration user interface with form validation and clean aesthetics.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="certificates">
+        <div class="container">
+            <h2 class="section-title">Certificates</h2>
+            <div class="grid">
+                <div class="card glass certificate-card">
+                    <img src="assets/images/certificate-avalanche-completion.jpg"
+                        alt="Avalanche Completion Certificate">
+                    <h3>Avalanche Completion</h3>
+                    <p>Completion of Blockchain and Web3 Info Session powered by Avalanche University Connect Program.
+                    </p>
+                </div>
+                <div class="card glass certificate-card">
+                    <img src="assets/images/certificate-sonder-participation.jpg"
+                        alt="Sonder Participation Certificate">
+                    <h3>Sonder Participation</h3>
+                    <p>Certificate of Participation in SONDER 2025: Google Dev World Tour in Indonesia.</p>
+                </div>
+                <div class="card glass certificate-card">
+                    <img src="assets/images/certificate-avalanche-participation.jpg"
+                        alt="Avalanche Participation Certificate">
+                    <h3>Avalanche Participation</h3>
+                    <p>Participation in Avalanche Team1 University Connect held at Central Mindanao University.</p>
+                </div>
+                <div class="card glass certificate-card">
+                    <img src="assets/images/certificate-openai-vibe-recognition.jpg"
+                        alt="OpenAI Vibe Recognition Certificate">
+                    <h3>OpenAI Vibe Recognition</h3>
+                    <p>Recognition for participation in OpenAI Vibe Coding Session and exploring No-Code development.
+                    </p>
                 </div>
             </div>
         </div>
