--- a/index.html
+++ b/index.html
@@ -10,19 +10,11 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yohancallanta.com/">
+    <meta property="og:url" content="https://www.facebook.com/han.yu.54013">
     <meta property="og:title" content="Yohan Lukin Callanta - Portfolio">
     <meta property="og:description"
-        content="Portfolio of Yohan Lukin Callanta, a Web Developer & Programmer based in the Philippines.">
+        content="Portfolio of Yohan Lukin Callanta, a Software Engineer based in the Philippines.">
     <meta property="og:image" content="assets/images/profile.jpg">
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://yohancallanta.com/">
-    <meta property="twitter:title" content="Yohan Lukin Callanta - Portfolio">
-    <meta property="twitter:description"
-        content="Portfolio of Yohan Lukin Callanta, a Web Developer & Programmer based in the Philippines.">
-    <meta property="twitter:image" content="assets/images/profile.jpg">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -46,7 +38,12 @@
                     <h1>Yohan Lukin Callanta</h1>
                 </a>
             </div>
-            <button class="menu-toggle" aria-label="Toggle navigation">&#9776;</button>
+            <div class="menu-overlay"></div>
+            <button class="menu-toggle" aria-label="Toggle navigation">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#education">Education</a></li>
@@ -63,7 +60,7 @@
         <div class="container hero-content">
             <img src="assets/images/profile.jpg" alt="Yohan Lukin Callanta" class="profile-img">
             <h1>Yohan Lukin Callanta</h1>
-            <p>Web Developer & Programmer</p>
+            <p>Software Engineer</p>
             <a href="#contact" class="cta-btn">Get In Touch</a>
         </div>
     </header>
@@ -105,7 +102,8 @@
                 </div>
                 <div class="card glass timeline-item">
                     <h3>Central Mindanao University</h3>
-                    <p>2nd Year Undergraduate</p>
+                    <p>4th Year Senior Undergraduate
+                    <p>
                 </div>
             </div>
         </div>
@@ -118,14 +116,6 @@
                 <div class="card glass timeline-item">
                     <h3>CMU Quality Assurance Office</h3>
                     <p>ISO Accreditation</p>
-                </div>
-                <div class="card glass timeline-item">
-                    <h3>DepED (Freelance)</h3>
-                    <p>Data Analysis and Reporting</p>
-                </div>
-                <div class="card glass timeline-item">
-                    <h3>DPWH (Freelance)</h3>
-                    <p>Structural and Plumbing Engineering (Assistant)</p>
                 </div>
             </div>
         </div>
@@ -141,64 +131,76 @@
                     <div class="skill-item"><i class="devicon-python-plain colored"></i><span>Python</span></div>
                     <div class="skill-item"><i class="devicon-java-plain colored"></i><span>Java</span></div>
                     <div class="skill-item"><i class="devicon-cplusplus-plain colored"></i><span>C/C++</span></div>
-                    <div class="skill-item"><i class="devicon-html5-plain colored"></i><span>HTML5</span></div>
-                    <div class="skill-item"><i class="devicon-css3-plain colored"></i><span>CSS3</span></div>
-                    <div class="skill-item"><i class="devicon-javascript-plain colored"></i><span>JavaScript</span>
-                    </div>
+                    <div class="skill-item"><i class="devicon-csharp-plain colored"></i><span>C#</span></div>
                     <div class="skill-item"><i class="devicon-typescript-plain colored"></i><span>TypeScript</span>
                     </div>
                     <div class="skill-item"><i class="devicon-php-plain colored"></i><span>PHP</span></div>
-                    <div class="skill-item"><i class="devicon-csharp-plain colored"></i><span>C#</span></div>
+                    <div class="skill-item"><i class="devicon-dart-plain colored"></i><span>Dart</span></div>
+                    <div class="skill-item"><i class="devicon-visualbasic-plain colored"></i><span>VB.NET</span></div>
                 </div>
             </div>
 
             <div class="skill-category">
-                <h3>Frameworks</h3>
+                <h3>Frameworks & Libraries</h3>
                 <div class="skills-grid">
+                    <div class="skill-item"><i class="devicon-vuejs-plain colored"></i><span>Vue</span></div>
                     <div class="skill-item"><i class="devicon-django-plain colored"></i><span>Django</span></div>
+                    <div class="skill-item"><i class="devicon-laravel-plain colored"></i><span>Laravel</span></div>
+                    <div class="skill-item"><i class="devicon-nestjs-plain colored"></i><span>NestJS</span></div>
                     <div class="skill-item"><i class="devicon-dotnetcore-plain colored"></i><span>.NET</span></div>
                     <div class="skill-item"><i class="devicon-flutter-plain colored"></i><span>Flutter</span></div>
                     <div class="skill-item"><i class="devicon-react-original colored"></i><span>React Native</span>
                     </div>
-                    <div class="skill-item"><i class="devicon-nestjs-plain colored"></i><span>NestJS</span></div>
-                    <div class="skill-item"><i class="devicon-laravel-plain colored"></i><span>Laravel</span></div>
                 </div>
             </div>
 
             <div class="skill-category">
-                <h3>Database & Cloud</h3>
+                <h3>Databases</h3>
                 <div class="skills-grid">
                     <div class="skill-item"><i class="devicon-postgresql-plain colored"></i><span>PostgreSQL</span>
                     </div>
                     <div class="skill-item"><i class="devicon-mysql-plain colored"></i><span>MySQL</span></div>
-                    <div class="skill-item"><i class="devicon-firebase-plain colored"></i><span>Firebase</span></div>
                     <div class="skill-item">
                         <img src="https://supabase.com/dashboard/img/supabase-logo.svg" alt="Supabase"
                             class="skill-icon-img">
                         <span>Supabase</span>
                     </div>
+                    <div class="skill-item"><i class="devicon-firebase-plain colored"></i><span>Firebase</span></div>
+                    <div class="skill-item"><i class="devicon-mysql-plain colored"></i><span>Workbench</span></div>
+                    <div class="skill-item"><i class="devicon-postgresql-plain colored"></i><span>pgAdmin</span></div>
+                    <div class="skill-item">
+                        <img src="assets/images/navicat-logo.png" alt="Navicat" class="skill-icon-img">
+                        <span>Navicat</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="skill-category">
+                <h3>Cloud & DevOps</h3>
+                <div class="skills-grid">
                     <div class="skill-item"><i
-                            class="devicon-amazonwebservices-plain-wordmark colored"></i><span>AWS</span></div>
+                            class="devicon-amazonwebservices-plain-wordmark colored"></i><span>AWS</span>
+                    </div>
                     <div class="skill-item"><i class="devicon-googlecloud-plain colored"></i><span>GCP</span></div>
                     <div class="skill-item"><i class="devicon-vercel-original colored"></i><span>Vercel</span></div>
                     <div class="skill-item">
                         <img src="assets/images/railway.svg" alt="Railway" class="skill-icon-img">
                         <span>Railway</span>
                     </div>
+                    <div class="skill-item"><i class="devicon-docker-plain colored"></i><span>Docker</span></div>
+                    <div class="skill-item"><i class="devicon-linux-plain colored"></i><span>Linux</span></div>
+                    <div class="skill-item"><i class="devicon-archlinux-plain colored"></i><span>Arch</span></div>
                 </div>
             </div>
 
             <div class="skill-category">
-                <h3>Tools & Environment</h3>
+                <h3>Tools & Utilities</h3>
                 <div class="skills-grid">
                     <div class="skill-item"><i class="devicon-vscode-plain colored"></i><span>VS Code</span></div>
-                    <div class="skill-item"><i class="devicon-neovim-plain colored"></i><span>Neovim</span></div>
                     <div class="skill-item"><i class="devicon-visualstudio-plain colored"></i><span>Visual Studio</span>
                     </div>
-                    <div class="skill-item"><i class="devicon-docker-plain colored"></i><span>Docker</span></div>
+                    <div class="skill-item"><i class="devicon-neovim-plain colored"></i><span>Neovim</span></div>
                     <div class="skill-item"><i class="devicon-git-plain colored"></i><span>Git</span></div>
-                    <div class="skill-item"><i class="devicon-linux-plain colored"></i><span>Linux</span></div>
-                    <div class="skill-item"><i class="devicon-archlinux-plain colored"></i><span>Arch</span></div>
                     <div class="skill-item">
                         <img src="assets/images/packet-tracer.png" alt="Packet Tracer" class="skill-icon-img">
                         <span>Packet Tracer</span>
@@ -215,18 +217,20 @@
     <section id="projects">
         <div class="container">
             <h2 class="section-title">Projects</h2>
-            <div class="grid">
-                <div class="card glass project-card">
-                    <img src="assets/images/Screenshot 2023-12-14 112041.png" alt="Anime Calculator">
-                    <h3>Anime Calculator</h3>
-                    <p>A simple calculator with chill, anime vibes. Features custom clear logic and responsive layout.
-                    </p>
+            <div class="under-construction-container">
+                <div class="terminal-loader">
+                    <div class="terminal-header">
+                        <div class="terminal-title">Status: Construction</div>
+                        <div class="terminal-controls">
+                            <div class="control close"></div>
+                            <div class="control minimize"></div>
+                            <div class="control maximize"></div>
+                        </div>
+                    </div>
+                    <div class="text">Loading amazing projects...</div>
                 </div>
-                <div class="card glass project-card">
-                    <img src="assets/images/Screenshot 2023-12-15 001406.png" alt="Registration Form">
-                    <h3>Registration System</h3>
-                    <p>A simple registration user interface with form validation and clean aesthetics.</p>
-                </div>
+                <h3>WIP: Building Something Great</h3>
+                <p>My projects showcase is currently being re-engineered. Check back soon for the update!</p>
             </div>
         </div>
     </section>
@@ -236,11 +240,10 @@
             <h2 class="section-title">Certificates</h2>
             <div class="grid">
                 <div class="card glass certificate-card">
-                    <img src="assets/images/certificate-avalanche-completion.jpg"
-                        alt="Avalanche Completion Certificate">
-                    <h3>Avalanche Completion</h3>
-                    <p>Completion of Blockchain and Web3 Info Session powered by Avalanche University Connect Program.
-                    </p>
+                    <img src="assets/images/certificate-capstone-presentation.jpg"
+                        alt="Capstone Presentation Certificate">
+                    <h3>Capstone Presentation</h3>
+                    <p>Presented the Farm Operations Management System at the CISC Colloquium A.Y. 2025-2026.</p>
                 </div>
                 <div class="card glass certificate-card">
                     <img src="assets/images/certificate-sonder-participation.jpg"
@@ -248,6 +251,14 @@
                     <h3>Sonder Participation</h3>
                     <p>Certificate of Participation in SONDER 2025: Google Dev World Tour in Indonesia.</p>
                 </div>
+                <div class="card glass certificate-card">
+                    <img src="assets/images/certificate-avalanche-completion.jpg"
+                        alt="Avalanche Completion Certificate">
+                    <h3>Avalanche Completion</h3>
+                    <p>Completion of Blockchain and Web3 Info Session powered by Avalanche University Connect Program.
+                    </p>
+                </div>
+
                 <div class="card glass certificate-card">
                     <img src="assets/images/certificate-avalanche-participation.jpg"
                         alt="Avalanche Participation Certificate">
@@ -260,6 +271,11 @@
                     <h3>OpenAI Vibe Recognition</h3>
                     <p>Recognition for participation in OpenAI Vibe Coding Session and exploring No-Code development.
                     </p>
+                </div>
+                <div class="card glass certificate-card">
+                    <img src="assets/images/certificate-riptide.jpg" alt="Riptide Participation Certificate">
+                    <h3>Science Month Participation</h3>
+                    <p>Participation in the 2021 Science Month Virtual Culminating Activity with the theme RIPTIDE.</p>
                 </div>
             </div>
         </div>
