scroll-to-top on page load, enhance responsive loading screen styles, and add SVG viewBox attribute on circle bar

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <!-- Loading Progress Indicator -->
             <div class="loading-content">
                 <div class="progress-ring-wrapper">
-                    <svg class="progress-ring" width="120" height="120">
+                    <svg class="progress-ring" width="120" height="120" viewBox="0 0 120 120">
                         <circle class="progress-ring-background" stroke="#333" stroke-width="4" fill="transparent"
                             r="40" cx="60" cy="60" />
                         <circle class="progress-ring-progress" stroke="#ffffff" stroke-width="4" fill="transparent"
