oading screen console animation with dynamic cursors and variable pauses, and update portfolio skills with JavaScript and Node.js

--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@
                     <div class="skill-item"><i class="devicon-java-plain colored"></i><span>Java</span></div>
                     <div class="skill-item"><i class="devicon-cplusplus-plain colored"></i><span>C/C++</span></div>
                     <div class="skill-item"><i class="devicon-csharp-plain colored"></i><span>C#</span></div>
+                    <div class="skill-item"><i class="devicon-javascript-plain colored"></i><span>JavaScript</span>
+                    </div>
                     <div class="skill-item"><i class="devicon-typescript-plain colored"></i><span>TypeScript</span>
                     </div>
                     <div class="skill-item"><i class="devicon-php-plain colored"></i><span>PHP</span></div>
@@ -167,6 +169,7 @@
                 <h3>Frameworks & Libraries</h3>
                 <div class="skills-grid">
                     <div class="skill-item"><i class="devicon-vuejs-plain colored"></i><span>Vue</span></div>
+                    <div class="skill-item"><i class="devicon-nodejs-plain colored"></i><span>Node.js</span></div>
                     <div class="skill-item"><i class="devicon-django-plain colored"></i><span>Django</span></div>
                     <div class="skill-item"><i class="devicon-laravel-plain colored"></i><span>Laravel</span></div>
                     <div class="skill-item"><i class="devicon-nestjs-plain colored"></i><span>NestJS</span></div>
