interactive image viewer modal for certificates, add new certificate images, and prevent body scrolling during page load

--- a/index.html
+++ b/index.html
@@ -292,11 +292,22 @@
                     <p>Participation in Avalanche Team1 University Connect held at Central Mindanao University.</p>
                 </div>
                 <div class="card glass certificate-card">
+                    <img src="assets/images/certificate-typing-speed.jpg" alt="Typing Speed Certificate">
+                    <h3>Typing Speed Certification</h3>
+                    <p>Achieved a high typing speed score in a standardized typing test.</p>
+                </div>
+                <div class="card glass certificate-card">
                     <img src="assets/images/certificate-openai-vibe-recognition.jpg"
                         alt="OpenAI Vibe Recognition Certificate">
                     <h3>OpenAI Vibe Recognition</h3>
                     <p>Recognition for participation in OpenAI Vibe Coding Session and exploring No-Code development.
                     </p>
+                </div>
+                <div class="card glass certificate-card">
+                    <img src="assets/images/certificate-research-summit-2022.jpg" alt="Best Research Paper Certificate">
+                    <h3>Best Research Paper</h3>
+                    <p>Awarded Best Research Paper during the Senior High School Research Summit 2022 at Bukidnon
+                        National High School.</p>
                 </div>
                 <div class="card glass certificate-card">
                     <img src="assets/images/certificate-riptide.jpg" alt="Riptide Participation Certificate">
@@ -320,6 +331,13 @@
             <p>&copy; 2026 Yohan Lukin Callanta. All Rights Reserved.</p>
         </div>
     </footer>
+
+    <!-- Image Viewer Modal -->
+    <div id="image-viewer" class="modal">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="full-image">
+        <div id="caption"></div>
+    </div>
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
