changed some stuff

--- a/index.html
+++ b/index.html
@@ -30,10 +30,8 @@
 </head>
 
 <body>
-    <!-- Loading Screen -->
     <div class="loading-screen">
         <div class="loading-wrapper">
-            <!-- YoRHa Console -->
             <div class="yorha-console-loading">
                 <div class="console-header">
                     <div class="console-title">Portfolio Terminal</div>
@@ -47,9 +45,6 @@
                     <div class="console-cursor">_</div>
                 </div>
             </div>
-
-            <!-- Loading Progress Indicator -->
-
         </div>
     </div>
     <div id="particles-js"></div>
@@ -294,7 +289,7 @@
                 <div class="card glass certificate-card">
                     <img src="assets/images/certificate-typing-speed.jpg" alt="Typing Speed Certificate">
                     <h3>Typing Speed Certification</h3>
-                    <p>Achieved a high typing speed score in a standardized typing test.</p>
+                    <p>Achieved 1st Runner Up in the 2025 CMU-CISC Typing Speed Championship.</p>
                 </div>
                 <div class="card glass certificate-card">
                     <img src="assets/images/certificate-openai-vibe-recognition.jpg"
